@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
 
 
 
@@ -28,11 +27,8 @@
   
   
   
-  <title>Installing and Using CoffeeMud 5.4</title>
-  <link rel="StyleSheet" href="style.css" type="text/css" media="screen" />
-<!-- Modified by Josh Mueller, 2006-5-5, fix validation problems, add index, and fix spelling errors -->
-</head>
-
+  
+  <title>Installing and Using CoffeeMud 5.4</title><link rel="StyleSheet" href="style.css" type="text/css" media="screen" /><!-- Modified by Josh Mueller, 2006-5-5, fix validation problems, add index, and fix spelling errors --></head>
 
 <body>
 
@@ -2785,7 +2781,7 @@ files found in the resources directory are:</p>
 
 
 
-                  <tr>
+                  <tr><td>randomdata.xml</td><td>A default area generation file for the GENERATE command.</td></tr><tr>
 
 
 
@@ -7113,5 +7109,4 @@ is located, and enter:</p>
 
 
   
-</body>
-</html>
+</body></html>
